# sgnl

./: .gitlab-ci.yml  Makefile  README.md  build_requirements.txt  mkdocs.yml  pyproject.toml
config/: fake_cbc.yaml  offline_dag.yml  online_dag.yml
container/: Dockerfile  Dockerfile.pytorch
docs/: conf.py  index.md  index.rst  install.md
docs/api/scripts/: mock_gracedb_server.md
docs/tutorials/: offline_analysis.md  online_analysis.md
examples/: Makefile  assign-far  assign-lr  plot-sim
examples/offline/: sample-config.yml
examples/offline/zlw/: example-config-zlw.yml
examples/online/: H1L1V1-GSTLAL_BBH_SALPETER_MASS_MODEL-0-0.h5  Makefile  grafana-dashboard.json  inspiral.yml
examples/online/mass_model/: fgmc_model_sgnl_bbh_mdc.h5
examples/sgnl-env/: Makefile  README.md  docker-compose.yml  influxdb.conf  kafka.env  microservices.py  server.properties  zoo.env
examples/snapshot/: snapshot.py
src/sgnl/: __init__.py  cbc_template_fir.py  control.py  events.py  kernels.py  psd.py  sgnlio.py  simulation.py  sort_bank.py  spawaveform.py  strike_object.py  svd_bank.py  templates.py  viz.py
src/sgnl/dags/: config.py  layers.py  segments.py  util.py
src/sgnl/plots/: psd.py  util.py
src/sgnl/sinks/: __init__.py  gracedb_sink.py  impulse.py  psd_sink.py  stillsuit_sink.py  strike_sink.py
src/sgnl/transforms/: __init__.py  eye_candy.py  horizon.py  itacacac.py  lloid.py  lloid_correlate.py  strike.py
tests/: test_dags_config.py  test_dags_segments.py  test_gracedb_sink.py  test_inspiral.py  test_inspiral_online.py  test_itacacac.py  test_ll_dagger.py  test_reference_psd.py  test_segment_ops.py  test_sort_bank.py  test_strike.py  test_svd_bank.py
