[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4.3",
    "wheel",
    "pyproject-flake8",
]
build-backend = "setuptools.build_meta"

[project]
name = "sgnl"
dynamic = ["version"]
dependencies = [
    # External packages
    "pandas",
    # LIGO dependencies
    "ligo-gracedb",
    # SGN dependencies
    "sgn",
    "sgn-ts",
    "sgn-ligo",
    "flask",# FIXME remove this once we move the gracedb mock server out of here.
    "ligo-scald",
]

requires-python = ">=3.9"
authors = [
    { name = "Chad Hanna", email = "crh184@psu.edu" },
    { name = "Yun-Jing Huang", email = "yzh5436@psu.edu" },
    { name = "James Kennington", email = "jmk7376@psu.edu" },
]
description = "Inspiral Search Pipeline using SGN Framework"
readme = "README.md"
license = { text = "MPL-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://git.ligo.org/greg/sgnl"
Documentation = "https://docs.ligo.org/greg/sgnl"
Issues = "https://git.ligo.org/greg/sgnl/issues"

[project.scripts]
sgnl-add-segments = "sgnl.bin.add_segments:main"
sgnl-assign-far = "sgnl.bin.assign_far:main"
sgnl-assign-likelihood = "sgnl.bin.assign_likelihood:main"
sgnl-create-prior-diststats = "sgnl.bin.create_prior_diststats:main"
sgnl-dagger = "sgnl.bin.dagger:main"
sgnl-extinct-bin = "sgnl.bin.extinct_bin:main"
sgnl-inspiral = "sgnl.bin.inspiral:main"
sgnl-ll-dq = "sgnl.bin.ll_dq:main"
sgnl-ll-inspiral-event-uploader = "sgnl.bin.ll_inspiral_event_uploader:main"
sgnl-ll-inspiral-event-plotter = "sgnl.bin.ll_inspiral_event_plotter:main"
sgnl-ll-marginalize-likelihoods-online = "sgnl.bin.ll_marginalize_likelihoods_online:main"
sgnl-ll-trigger-counter = "sgnl.bin.ll_trigger_counter:main"
sgnl-median-of-psds = "sgnl.bin.median_of_psds:main"
sgnl-mock-gracedb-server = "sgnl.bin.mock_gracedb_server:main"
sgnl-plot-psd = "sgnl.bin.plot_psd:main"
sgnl-reference-psd = "sgnl.bin.reference_psd:main"
sgnl-results-page = "sgnl.bin.results_page:main"
sgnl-sim-page = "sgnl.bin.sim_page:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "lalsuite",
    "torch",
    "gwpy",
]
docs = [
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material",
    "pymdown-extensions",
]
lint = [
    "black",
    "flake8",
    "flake8-bandit",
    "flake8-black",
    "flake8-bugbear",
    "flake8-future-annotations",
    "flake8-isort",
    "flake8-logging-format",
    "flake8-pyproject",
    "isort",
    "mypy",
    "mypy-extensions",
]
dev = [
    "sgnl[docs]",
    "sgnl[lint]",
    "sgnl[test]",
]
dag = [
    "ezdag",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sgnl = [
    "py.typed",
    "dags/default_config.yml",
]

[tool.setuptools_scm]
write_to = "src/sgnl/_version.py"

[tool.coverage.paths]
source = [
    "src/sgnl/",
    "*/sgnl/",
]

[tool.coverage.report]
omit = ["_version.py", "tests/*", "examples/*", "setup.py", "*/__init__.py"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "build",
    "docs",
]

[tool.pytest.ini_options]
addopts = "-p no:warnings --cov=sgnl"

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "S101",
]
per-file-ignores = [
    "__init__.py:F401",
    "_version.py:BLK100",
    "docs/conf.py:E501",
    "tests/*.py:E731",
]
exclude = [
    "build",
    "docs",
    "_version.py",
]
